# pytest-order

./: .buildinfo  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build-docs.sh  genindex.html  index.html  mypy.ini  objects.inv  old_issues.md  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: builddocartifacts.yml  builddocs.yml  performance.yml  pythontests.yml  release-deploy.yml
_sources/: index.rst.txt
dev/: .buildinfo  configuration.html  genindex.html  index.html  intro.html  objects.inv  other_plugins.html  search.html  searchindex.js  usage.html
dev/_sources/: index.rst.txt  intro.rst.txt  usage.rst.txt
dev/_static/: documentation_options.js
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  configuration.rst  index.rst  intro.rst  other_plugins.rst  usage.rst
example/: README  test.py  test_classes.py  test_combined.py  test_module1.py  test_module2.py  test_module_a.py  test_modules_b.py  test_number.py  test_ordinal_class_mark.py  test_ordinals.py  test_other.py  test_quickstart.py  test_relative.py  test_relative_class_marker.py  test_sort_breaks_dependency.py  test_sort_dependency.py  test_sparse_ordering.py
example/introduction/: test.py  (+1 more)
fixture/: test_classes.py  test_functions1.py
perf_tests/: test_dependencies.py  test_order.py  test_ordinal.py  test_relative.py  test_relative_dense.py  util.py
pytest_order/: __init__.py  item.py  plugin.py  settings.py  sorter.py
pytest_ordering/: __init__.py
pytest_ordering2/: __init__.py
stable/: .buildinfo  configuration.html  genindex.html  index.html  intro.html  objects.inv  other_plugins.html  search.html  searchindex.js  usage.html
tests/: conftest.py  plugin_reverse.py  test_class_marks.py  test_dependency.py  test_indulgent_ordering.py  test_marker_prefix.py  test_misc.py  test_multiple_ordering.py  test_order_group_scope.py  test_order_group_scope_dep.py  test_order_group_scope_named_dep.py  test_order_group_scope_relative.py  test_order_scope.py  test_order_scope_level.py  test_order_transitive.py  test_ordering.py  test_ordering_options.py  test_relative_ordering.py  test_sparse_ordinals.py  test_xdist_handling.py  utils.py
(+41 files in other folders)
